<resources>
    <string name="app_name">Nutella</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pocket2">PocketActivity</string>

    <!-- DIALOGS BUTTONS AND TITLES -->
    <string name="add_pocket_title">Add pocket</string>
    <string name="add_pocket_hint">Pocket\'s name</string>
    <string name="add_button">Add</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="amount_hint">Amount</string>
    <string name="next">Continue</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="descr_hint">Description</string>
    <string name="add_transaction">Add transaction</string>
    <string name="ok">Ok</string>
    <string name="update_pocket">Update pocket</string>
    <string name="delete_pocket">Delete pocket</string>

    <!-- MESSAGES -->
    <string name="add_pocket_dialog">Insert pocket\'s name:</string>
    <string name="delete_dialog">Do you want to delete?</string>
    <string name="error_add_pocket">That pocket already exists</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Please deselect the categories you won\'t need.</string>
    <string name="error_add_transaction">Error</string>
    <string name="expenses">Expenses</string>

    <!-- OPTIONS -->
    <string name="filter_all">All</string>
    <string name="filter_week">This week</string>
    <string name="filter_month">This month</string>
    <string name="filter_year">This year</string>
    <string name="Balance">Balance</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_all_pockets">Pockets</string>
    <string name="value_0">$5</string>
    <string name="value_1">$10</string>
    <string name="value_2">$25</string>
    <string name="value_3">$100</string>

    <!-- SETTINGS -->
    <string name="pref_title">Settings</string>
    <string name="pref_jump_pockets">Start in pocket</string>
    <string name="pref_no_jump">None</string>
    <string name="pref_cats_enabled">Enabled categories</string>
    <string name="pref_reminder">Daily reminder</string>
    <string name="pref_reminder_summary">Remind yourself to add expenses</string>
    <string name="pref_time_reminder">Reminder time</string>

    <!-- NOTIFICATIONS -->
    <string name="notif_title">Daily reminder</string>
    <string name="notif_detail">Remember to add today\'s expenses</string>
    <string name="notif_mute">Mute</string>

</resources>
