<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_jump_pockets"
        android:title="@string/pref_jump_pockets"
        android:summary="%s" />

    <MultiSelectListPreference
        android:title="@string/pref_cats_enabled"
        android:key="@string/pref_cats_enabled"/>

    <CheckBoxPreference
        android:title="@string/pref_reminder"
        android:key="@string/pref_reminder"
        android:summary="@string/pref_reminder_summary"/>

    <com.example.daniel.projectnutella.time.TimePreference
        android:title="@string/pref_time_reminder"
        android:key="@string/pref_time_reminder"
        android:summary="%s"
        android:dependency="@string/pref_reminder"
        />


</PreferenceScreen>